traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:25: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByColumn:28: error: expected start of definition
	override def forward()  {
                 ^TraversalByColumn:31: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByColumn:34: error: expected start of definition
	override def backward() {
                 ^TraversalByColumn:37: error: Unmatched closing brace '}' ignored here
}
^